--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -1,5 +1,5 @@
 # Read the documentation: https://symfony.com/doc/master/bundles/FOSRestBundle/index.html
-fos_rest: ~
+#fos_rest: ~
 #    param_fetcher_listener:  true
 #    allowed_methods_listener:  true
 #    routing_loader: true
@@ -13,3 +13,19 @@ fos_rest: ~
 #    format_listener:
 #        rules:
 #            - { path: ^/api, prefer_extension: true, fallback_format: json, priorities: [ json, html ] }
+
+#fos_rest:
+#  view:
+#    jsonp_handler: ~
+
+fos_rest:
+  param_fetcher_listener: true
+  body_listener: true
+  format_listener:
+    enabled: true
+    rules:
+      - { path: '^/api', priorities: ['json', 'xml'], fallback_format: 'html' }
+  versioning: true
+  view:
+    jsonp_handler: ~
+    view_response_listener: 'force'
