--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -21,7 +21,14 @@
 fos_rest:
   param_fetcher_listener: true
   body_listener: true
-  body_converter: true
+  body_converter:
+    enabled: true
+    validate: true
+    validation_errors_argument: validationErrors
+  exception:
+    enabled: true
+#    exception_controller: 'fos_rest.exception.controller:showAction'
+    exception_controller: 'App\Controller\ExceptionController::showAction'
   format_listener:
     enabled: true
     rules:
